<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Register" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textInputName"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <!--            <TextView-->
            <!--                android:id="@+id/textInputNameHeader"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:paddingStart="5sp"-->
            <!--                android:text="Enter your name"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textSize="15sp"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->

            <EditText
                android:id="@+id/userNameInRegister"
                style="@style/modifiedEditText"
                android:hint="@string/login_name_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textInputMobile"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <!--            <TextView-->
            <!--                android:id="@+id/textInputMobileHeader"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:paddingStart="5sp"-->
            <!--                android:text="Phone number"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textSize="15sp"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->

            <EditText
                android:id="@+id/userMobileNumberInRegister"
                style="@style/modifiedEditText"
                android:hint="@string/login_mobile_number_hint"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="17sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textInputPassword1"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <!--            <TextView-->
            <!--                android:id="@+id/textInputPassword1Header"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:paddingStart="5sp"-->
            <!--                android:text="@string/prompt_password"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textSize="15sp"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->

            <EditText
                android:id="@+id/userPass1InRegister"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="17sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textInputPassword2"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <!--            <TextView-->
            <!--                android:id="@+id/textInputPassword2Header"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:paddingStart="5sp"-->
            <!--                android:text="@string/prompt_re_enter_password"-->
            <!--                android:textColor="@color/black"-->
            <!--                android:textSize="15sp"-->
            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent" />-->

            <EditText
                android:id="@+id/userPass2InRegister"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/cirRegisterButton"
            style="@style/loginButton"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup" />

        <TextView
            android:id="@+id/loginRedirectLink"
            style="@style/loginRedirectLink"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:clickable="true"
            android:text="@string/signup_login_hint"
            android:textAlignment="textEnd"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>