<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Login" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textInputNumber"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <!--        <TextView-->
            <!--            android:id="@+id/textInputNumberHeader"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:paddingStart="5sp"-->
            <!--            android:text="Phone number"-->
            <!--            android:textSize="15sp"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toTopOf="parent" />-->

            <EditText
                android:id="@+id/userMobileNumberInLogin"
                style="@style/modifiedEditText"
                android:hint="@string/login_phone_number_hint"
                android:inputType="phone"
                android:maxLines="1"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <!--        <TextView-->
            <!--            android:id="@+id/textInputPasswordHeader"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:paddingStart="5sp"-->
            <!--            android:text="Password"-->
            <!--            android:textSize="15sp"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toTopOf="parent" />-->

            <EditText
                android:id="@+id/userPasswordInLogin"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/cirLoginButton"
            style="@style/loginButton"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Login" />

        <TextView
            android:id="@+id/resetPasswordRedirectLink"
            style="@style/loginRedirectLink"
            android:layout_marginTop="10sp"
            android:clickable="true"
            android:text="forgot password?"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/registerRedirectLink"
            style="@style/loginRedirectLink"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:clickable="true"
            android:text="@string/login_signup_hint"
            android:textAlignment="textEnd" />

    </LinearLayout>
</ScrollView>