<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_massege_details_view_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactMassegeDetailsView">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/full_layout_of_app_bar_constraint"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="top"
        android:background="@color/MainHeaderColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/CMDVBackImageButton1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="FinishCMDVActivity"
            android:src="@drawable/baseline_arrow_back_24"
            android:backgroundTint="@color/transparent"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginVertical="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/full_layout_of_app_bar_constraint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/CMDVBackImageButton1"
                app:layout_constraintTop_toTopOf="@+id/full_layout_of_app_bar_constraint">

                <TextView
                    android:id="@+id/Contact_name_of_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:onClick="getContactDetailsOfUser"
                    android:text="@string/Contact_name_in_particular_page"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/Contact_last_come_in_app_status"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/Contact_last_come_in_app_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Contact_name_of_user" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/Settings_in_contact_massege_details_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:onClick="getTestingSite"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/vertical_ellipsis_3_dot"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/idLoadingPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CMDVConstraintLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shapes_activity_massege_details_view_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/full_layout_of_app_bar_constraint">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ContactMassegeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/CMDVConstraintLayout1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CDMVNewUserConstraintLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CDMVNewUserConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ContactMassegeRecyclerView"
            tools:visibility="visible">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="add user"
                android:onClick="addNewUserIntoContact"
                android:textColor="@color/white"
                android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CMDVConstraintLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ContactMassegeRecyclerView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/CMDVConstraintLayout2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/shapes_massege_write_box_main_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/CMDVConstraintLayout3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/write_massege"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/white"
                    android:background="@android:color/transparent"
                    android:hint="@string/CMDVMassegeInputHint"
                    android:inputType="text"
                    android:autofillHints="name"
                    android:paddingStart="15dp"
                    android:paddingEnd="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/OtherActivityButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck"
                    tools:text="write massege hint tool"/>


                <ImageButton
                    android:id="@+id/OtherActivityButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/CMDVShareLocation"
                    android:onClick="OtherActivityButtonOnCLick"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:src="@drawable/baseline_location_on_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/write_massege"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/CMDVConstraintLayout3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/shapes_massege_send_button_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/CMDVConstraintLayout2"
                app:layout_constraintTop_toTopOf="parent">


                <ImageButton
                    android:id="@+id/send_massege_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:contentDescription="@string/CMDVSendMassegeDescription"
                    android:onClick="SendMassege"
                    android:padding="10dp"
                    android:src="@drawable/ic_massege_send_button_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>